# observer

./: .gitignore  Cargo.toml  flake.nix  readme.md
examples/: hello_world.rs
nix/: boilerplate.nix  checks.nix  packages.nix  shells.nix
src/: lib.rs
